Fix accessibility: align DOM order with visual order

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,6 @@
 
   .site-avatar {
     margin-left: auto;
-    order: 3;
     display: flex;
     align-items: center;
 
@@ -32,7 +31,6 @@
   }
 
   .site-nav {
-    order: 2;
     margin-left: auto;
   }
 }
